best-practices/add-safe-to-evict-label.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata: 
  name: add-safe-to-evict
  annotations:
    policies.kyverno.io/title: "Add safe-to-evict label"
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/category: "Best Practices"
    policies.kyverno.io/description: >-
      The Kubernetes cluster autoscaler does not evict pods that use hostPath or emptyDir volumes. 
      To allow eviction of these pods, the annotation cluster-autoscaler.kubernetes.io/safe-to-evict=true 
      must be added to the pods. 
spec: 
  rules: 
  - name: annotate-empty-dir
    match: 
      resources: 
        kinds: 
        - Pod
    mutate: 
      overlay:
        metadata:
          annotations:
            +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
        spec:          
          volumes: 
          - (emptyDir): {}
  - name: annotate-host-path
    match: 
      resources: 
        kinds: 
        - Pod
    mutate: 
      overlay:
        metadata:
          annotations:
            +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
        spec:          
          volumes: 
          - (hostPath):
              path: "*"
